Проверка работы SSH

--- a/TestGit.html
+++ b/TestGit.html
@@ -9,6 +9,7 @@
 <p> Буду проверять работу изменений</p>
 <p>Еще одно изменение</p>
 <p>третье изменение</p>
+<p>Прверка работы SSH</p>
 
 </body>
 </html>
